--- a/vercel.json
+++ b/vercel.json
@@ -1,25 +1,23 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "portfolio/wsgi.py",
-      "use": "@vercel/python"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "portfolio/wsgi.py"
-    }
-  ],
-  "rewrites": [
-    {
-      "source": "/Roadmap-for-SDE-Roles",
-      "destination": "https://roadmap-for-sde-roles-interview.vercel.app"
-    },
-    {
-      "source": "/Roadmap-for-SDE-Roles/(.*)",
-      "destination": "https://roadmap-for-sde-roles-interview.vercel.app/$1"
-    }
-  ]
+
+  "version": 2,
+
+  "builds": [
+
+    { "src": "portfolio/wsgi.py", "use": "@vercel/python" }
+
+  ],
+
+  "routes": [
+
+    {
+
+      "src": "/(.*)",
+
+      "dest": "portfolio/wsgi.py"
+
+    }
+
+  ]
+
 }
