--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,16 @@
 {
-
-  "version": 2,
-
-  "builds": [
-
-    { "src": "portfolio/wsgi.py", "use": "@vercel/python" }
-
-  ],
-
-  "routes": [
-
-    {
-
-      "src": "/(.*)",
-
-      "dest": "portfolio/wsgi.py"
-
-    }
-
-  ]
-
-}
+    "version": 2,
+    "builds": [
+      {
+        "src": "portfolio/wsgi.py",
+        "use": "@vercel/python"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "portfolio/wsgi.py"
+      }
+    ]
+  }
+  
